--- a/AUSTRALIA.css
+++ b/AUSTRALIA.css
@@ -768,7 +768,7 @@ color: white;}
     display: inline-flex;
     font-size: 2rem;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     flex-direction: row;
   }
   
@@ -1021,6 +1021,9 @@ color: white;}
   background-color: #333333;
   color: #fff;
   border-radius: 50px;
+}
+.media-icons:hover{
+  color:#4EAF4E;
 }
 .footer-row{
 
